[package]
name = "datafusion-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = "49.0"
console_error_panic_hook = "0.1.7"
# datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev = "965f4bcd54ed8f95c0b9d18f4312353727e37ea3", default-features = false }
datafusion = { path = "../arrow-datafusion/datafusion/core", default-features = false, features = [
    "parquet",
] }

parquet = "50.0"
tokio = { version = "1.35", features = ["macros", "rt", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.40"
thiserror = "1.0.57"
opendal = { version = "0.45.0", path = "../opendal/core", default-features = false, features = [
    "services-s3",
    "services-http",
] }
url = "2.5.0"
object_store = { version = "0.9.0", default-features = false }
# object_store_opendal = { git = "https://github.com/apache/opendal.git", rev = "af1433d0fda1badff50e136911f4fbae0cfed5a2", default-features = false }
object_store_opendal = { path = "../opendal/integrations/object_store", default-features = false }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
pin-project = "1"

# enable necessary features for indirect dependencies
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html?highlight=wasm-opt#cargotoml--configuration
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[profile.release]
debug = 1
