[package]
name = "datafusion-wasm"
version = "0.3.0"
edition = "2021"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
description = "WASM bindings for Apache DataFusion"
repository = "https://github.com/datafusion-contrib/datafusion-wasm-bindings"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = "53"
console_error_panic_hook = "0.1.7"
datafusion = { version = "43", default-features = false, features = [
    "parquet",
] }
parquet = "53"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.40"
thiserror = "1.0.57"
opendal = { version = "0.50", default-features = false, features = [
    "services-s3",
    "services-http",
] }
url = "2.5.0"
object_store = { version = "0.11", default-features = false }
# Currently override by `unsafe_opendal_store`
# object_store_opendal = { version = "0.48", default-features = false }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
pin-project = "1"

# enable necessary features for indirect dependencies
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
reqwest = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
debug = 1
